--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,8 @@
         <activity android:name=".view.activity.MineInfoActivity" />
         <activity android:name=".view.activity.MineApplyGwActivity" />
         <activity android:name=".view.activity.MineApplyFdActivity" />
+        <activity android:name=".view.activity.search.SearchGoodsActivity" />
+        <activity android:name=".view.activity.search.SearchResultTopicActivity" />
         <activity android:name=".view.activity.payActivity.ActivityPayHomeQb" />
         <activity android:name=".view.activity.payActivity.ActivityPayBankCardAdd" />
         <activity android:name=".view.activity.payActivity.ActivityPayBankCardList" />
