--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation 'com.amap.api:3dmap:5.1.0'
     implementation 'com.amap.api:location:3.3.0'
     implementation 'com.amap.api:search:5.1.0'
+    implementation 'com.github.addappcn:android-pickers:1.0.3'
+    implementation files('libs/fastjson-1.2.62.jar')
 }
 //MD5:  6D:AF:EC:5F:C5:FC:39:0B:69:66:64:6F:E3:45:2D:B1
 //SHA1: 40:D2:74:26:83:C1:82:5B:DD:EC:53:9F:73:C8:71:B4:52:C1:51:9E
